css/style.css
/* reset option */
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    
}


/* container-width-60*/

.container-width-60 {
    width: 60%;
    margin: 0 auto;
}

/* general */

body {
    text-align: center;
    font-family: 'Roboto', sans-serif;
}

h1,h2,h3,h4 {
    text-transform: uppercase;
}

ul {
    margin: 0;
}

hr {
    vertical-align: middle;
    display: inline-block;
    width: 9%;
    border-style: solid;
    border-radius: 2px;
    border-width: 2px;
}

h1 {
    font-size: 55px;
    margin: 0;
    color: white;
    text-transform: uppercase;
}

h2 {
    font-size: 40px;
}

img {
    width: 100%;
}



/* form */
form {
    text-align: left;
    font-size: 20px;
}

textarea {
    border-width: 0 0 1px;
    border-color: lightgrey;
    margin: 5px 0px;
    width: 100%;
    display: block;
}
button {
    transition: color 0.20s ease-in-out, background-color 0.20s ease-in-out, border-color 0.20s ease-in-out, box-shadow 0.20s ease-in-out;
    font-size: 20px;
    border-radius: 10px;
    margin-top: 50px;
    padding: 15px;
    background-color:#1abc9c;
    border: 1px solid white;
    color: white;
   
}

#button_hover:hover {
    color: #212529;
    background-color: white;
}

label {
    font-weight:400;
    font-size: 20px;
    color: #334455;
}

input {
    border-width: 0 0 1px;
    border-color: lightgrey;
    margin: 5px 0px;
    width: 100%;
    padding: 20px;
}

input:focus {
    background-color: lightgrey;
}

textarea:focus {
    background-color: lightgrey;
}

#submit {
    color: white;
    font-weight: 500;
    font-size: 18px;
    transition: color 0.20s ease-in-out, background-color 0.20s ease-in-out, border-color 0.20s ease-in-out, box-shadow 0.20s ease-in-out;
    border-radius:10px;
    padding: 15px 25px;
    width: auto;
    background-color: #1abc9c;
}

#submit:hover{
    border-color: #159a80;
    background-color: #159a80;
}


/* list style - link style */
.list-style {
    vertical-align: middle;
    font-weight: 700;
    text-transform: uppercase;
    display: inline-block;
    font-size: 25px;
    padding-right: 5px;
    color:white;
}

.link-style {
    padding: 0px 8px;
    font-weight: 500;
    font-size: 16px;
    color: white;
}
.link-style:hover {
    text-decoration: none;
    color:teal
}


/* paragraph */
.paragraph {
    margin-bottom: 15px;
    font-size: 19px;
}

/* line-star-line-style */

.fa-star {
    vertical-align: middle;
    font-size: 28px;
    margin: 15px 28px;
}

.line-star-color {
    border-color: #2c3e50;
    color: #2c3e50;

}

.star-line-height {
    line-height: 50px;
    margin-bottom: 10px;
}

/* /line-star-line-style */


.white {
    color: white;
    border-color: white;
}


/* header */
.header-background {
    background-color: #2c3e50;
}

.header-top {
    line-height: 80px;
}

#jumbotron {
    margin-bottom: 30px;
    padding-bottom: 40px;
    background-color:#1abc9c ;
}

#jumbotron  > h2 {
    font-size: 25px;

}

#jumbotron-img {
    margin-top: 35px;
    width: 20%;
}

.h2-jumbotron {
    display: inline-block;
    text-transform: uppercase;
    font-weight: 400;
    color: white;
}
/* main */

#section-1 {
    padding-bottom: 50px;
}

.portfolio_item{
    position: relative;
    cursor: pointer;
    display: block;
    border-radius: 10px;
    margin: 15px 0;
    overflow: hidden;

    background-color: rgba(26, 188, 156, 0.9);  
}


.portfolio_item:hover img {
    transition: all 0.2s ease-in-out;
    opacity: 0.1;
}

.portfolio_item:hover .plus {
    display: block;
}

.plus {
    
    position: absolute;
    display: none;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    font-size: 80px;
    color: white;
}






#section-2 {
    padding-top: 35px;
    padding-bottom: 30px;
    background-color: #1abc9c;
}

#section-3 {
    padding-bottom: 50px;
    padding-top: 50px;
    background-color: white;
}

/* footer */
footer {
    padding-top: 20px;
    background-color: #3a546d;  
}

.footer-top-background {
    margin-top: 30px;
    margin-bottom: 70px;
    background-color: #3a546d;
}
.h3-footer {
    text-transform: uppercase;
}

.footer-bottom-background {
    background-color: #2c3e50;
}

#location {
    font-size: 18px;
}

/* social-footer-style-hover */
.social-2-3 {
    font-size: 15px;
    color: white;
    border-radius: 50%;
    border: 1px solid white;
    padding: 15px;
}
.social-1-4 {
    font-size: 15px;
    color: white;
    margin: 2px;
    border-radius: 50%;
    border: 1px solid white;
    padding: 15px 18px;
}
.social-1-4:hover {
    color: #3a546d ;
    background-color: white;
}
.social-2-3:hover{
    color: #3a546d ;
    background-color: white;
}
/* /social-footer-style-hover */

footer .paragraph {
    text-align: center;
}

#copyright {
    line-height: 100px;
}

footer a {
    margin: 2px;
}

/* link-footer-top-right */
.green-strong-text {
    color: #1aba9b;
}
.green-strong-text:hover {
    color: #1aba9b;
    text-decoration: none;
}






/* mobile */
@media screen and (max-width:767px) {
    /* button-right-header */
    .button_header {
        margin-top: 20px;
        border: 1px solid white;
    }

    .ms_icon_bar {
        background-color: white;
    }

    .list-style-button {
        text-align: center;
        line-height: normal;
        text-transform: uppercase;
        display: block;
        padding: 20px;
        background-color: rgba(0, 0, 0, 0.5);
        border: 1px solid white;
    }
    /* /button-right-header */

    
    .link-style_button {
        color: white;
        font-size: 10px;
    }

    /* li start bootstrap */
    .header-top li{
        font-size: 16px;
    }
    /* /li start bootstrap */
    
    /* jumbotron*/
    .jumbotron_ > h1 {
        font-size: 35px;
    
    }

    .jumbotron_ > h2 {
        font-size: 18px;
    
    }

    #jumbotron-img {
        width: 40%;
    }
    /* /jumbotron*/

    /* line-star */
    hr{
        width: 11%;
    }
    .fa-star{
        font-size: 30px;
        margin: 0;
    }
    /* /line-star */

    .h3-footer {
        margin-top: 40px;
    }

    
}

/* h2-jumbotron fix mobile */
@media screen and (max-width:440px) {

    .jumbotron_ > h2{
        font-size: 12px;
    }   
}


/* tablet */
@media screen and (min-width:768px) and (max-width:1200px) {

    #jumbotron-img{
        width: 25%;
    }

    /* social */
    .social-2-3{
        font-size: 18px;
        padding: 12px;
    }
    .social-1-4 {
        font-size: 18px;
        padding: 12px 15px;
    }

    /* line-star */
    hr{
        width: 10%;
    }
    .fa-star{
        font-size: 30px;
        margin: 0px 15px;
    } 
}

